--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
       "react": "npm:react@^0.14.7",
       "react-bootstrap": "npm:react-bootstrap@^0.28.3",
       "react-dom": "npm:react-dom@^0.14.7",
-      "react-router": "npm:react-router@^2.0.0"
+      "react-router": "npm:react-router@^2.0.0",
+      "react-router-bootstrap": "npm:react-router-bootstrap@^0.20.1"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.8.24",
